# routes/students.js
@@ -1,0 +1,16 @@
+const express = require('express');
+const router = express.Router();
+
+const studentsController = require('../controllers/students');
+
+router.get('/', studentsController.getAll);
+
+router.get('/:id', studentsController.getSingle);
+
+router.post('/', studentsController.createStudent);
+
+router.put('/:id', studentsController.updateStudent);
+
+router.delete('/:id', studentsController.deleteStudent);
+
+module.exports = router;
